Updated makefile and directory structure

--- a/homework/prtest/makefile
+++ b/homework/prtest/makefile
@@ -3,45 +3,61 @@
 # Author: Alexander DuPree
 
 CC := gcc
-CFLAGS := -Wall -g 
-INCLUDE := -I tests/third_party/ -I include -I src
+CFLAGS := -Wall -g
+INCLUDE := -I include/
 
 SRC_DIR := src
 OBJ_DIR := obj
-SRC_FILES := $(wildcard $(SRC_DIR)/*.cpp)
-OBJ_FILES := $(patsubst $(SRC_DIR)/%.cpp,$(OBJ_DIR)/%.o,$(SRC_FILES))
+SRC_FILES := $(wildcard $(SRC_DIR)/*.c)
+OBJ_FILES := $(patsubst $(SRC_DIR)/%.c,$(OBJ_DIR)/%.o,$(SRC_FILES))
 APPLICATION := prtest.c
+APPLICATION_OBJ := obj/prtest.o
 TARGET := prtest
 
 TEST_CC := g++
+TEST_FLAGS := $(CFLAGS) -D UNIT_TESTS
+TEST_INCLUDE := $(INCLUDE) -I tests/third_party
+
 TEST_DIR := tests
-TEST_OBJ := tests/obj
+TEST_OBJ_DIR := tests/obj
+TEST_OBJ_DIR_C := tests/obj
 TEST_SRCS := $(wildcard $(TEST_DIR)/*.cpp)
-TEST_OBJS := $(patsubst $(TEST_DIR)/%.cpp,$(TEST_OBJ)/%.o,$(TEST_SRCS))
+TEST_OBJS := $(patsubst $(TEST_DIR)/%.cpp,$(TEST_OBJ_DIR)/%.o,$(TEST_SRCS))
+TEST_OBJS_C := $(patsubst $(SRC_DIR)/%.c,$(TEST_OBJ_DIR)/%.o,$(SRC_FILES))
 tests := tests/obj/debug/run_tests
 
-TESTS_MAIN := tests/obj/tests_main.o
-CATCH2_MAIN := tests/tests_main.cpp
+TESTS_MAIN := tests/third_party/tests_main.o
+THIRD_PARTY := tests/third_party/tests_main.cpp
 
-TARGET: $(OBJ_FILES) $(APPLICATION)
+TARGET: $(OBJ_FILES) $(APPLICATION_OBJ)
 	$(CC) $(CFLAGS) $(INCLUDE) -o $(TARGET) $^
 
-tests: $(TEST_OBJS) $(OBJ_FILES) $(TESTS_MAIN)
-	$(TEST_CC) $(CFLAGS) $(INCLUDE) -o $(tests) $^
+TESTS_MAIN: $(THIRD_PARTY)
+	$(CC) $(TEST_FLAGS) $(TEST_INCLUDE) -o $(TESTS_MAIN) -c $(THIRD_PARTY)
 
-$(TEST_OBJ)/%.o: $(TEST_DIR)/%.cpp $(APPLICATION)
-	$(TEST_CC) $(CFLAGS) $(INCLUDE) -c -o $@ $<
+tests: $(TESTS_MAIN) $(TEST_OBJS) $(TEST_OBJS_C)
+	$(TEST_CC) $(TEST_FLAGS) $(TEST_INCLUDE) -o $(tests) $^
 
-$(OBJ_DIR)/%.o: $(SRC_DIR)/%.cpp
+$(APPLICATION_OBJ): $(APPLICATION)
+	$(CC) $(CFLAGS) $(INCLUDE) -o $(APPLICATION_OBJ) -c $(APPLICATION)
+
+$(OBJ_DIR)/%.o: $(SRC_DIR)/%.c
 	$(CC) $(CFLAGS) $(INCLUDE) -c -o $@ $<
 
-TESTS_MAIN: $(CATCH2_MAIN)
-	$(CC) $(CFLAGS) $(INCLUDE) -c $(THIRD_PARTY) -o $(TESTS_MAIN)
+$(TEST_OBJ_DIR)/%.o: $(TEST_DIR)/%.cpp
+	$(TEST_CC) $(TEST_FLAGS) $(TEST_INCLUDE) -c -o $@ $<
+
+$(TEST_OBJ_DIR_C)/%.o: $(SRC_DIR)/%.c
+	$(CC) $(TEST_FLAGS) $(TEST_INCLUDE) -c -o $@ $<
 
 .PHONEY: clean
+.PHONEY: help
 
 clean:
 	rm -f  $(TARGET)
 	rm -f $(OBJ_DIR)/*.o
-	rm -f $(TEST_OBJ)/*.o
-	rm -f $(tests)
+	rm -f $(TEST_OBJ_DIR)/*.o
+	rm -f $(TESTS_MAIN)
+
+help:
+	@echo "Usage:\n\tBuild Application: make\n\tBuild Unit tests:  make tests\n\tClean obj files:   make clean"
