--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@ demo/
 
 homework/bittool/bittool
 homework/digraph/digraphs
+homework/digraph/tests/obj/debug/run_tests
 homework/prtest/prtest
 homework/prtest/tests/obj/debug/run_tests
 
