--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,8 @@
 [submodule "bigfib"]
 	path = bigfib
 	url = git@github.com:BartMassey/bigfib.git
+
+[submodule "cs201"]
+    path = demo/
+    url = git@github.com:BartMassey/cs201.git
+
