--- a/.gitmodules
+++ b/.gitmodules
@@ -3,6 +3,12 @@
 	url = git@github.com:BartMassey/bigfib.git
 
 [submodule "cs201"]
-    path = demo/
-    url = git@github.com:BartMassey/cs201.git
+	path = cs201
+	url = git@github.com:BartMassey/cs201.git
 
+[submodule "demo"]
+	path = demo
+	url = git@github.com:BartMassey/cs201.git
+[submodule "bigfib_example"]
+	path = bigfib_example
+	url = git@github.com:BartMassey/bigfib.git
